Вынес логику активной карточки в пользовательский хук. Реализовал сортировку отображения карточек

--- a/markup/offer.html
+++ b/markup/offer.html
@@ -64,7 +64,7 @@
                 <img class="offer__image" src="img/apartment-03.jpg" alt="Photo studio">
               </div>
               <div class="offer__image-wrapper">
-                <img class="offer__image" src="img/studio-01.jpg" alt="Photo studio">
+                <img class="offer__image" src="img/apartment-01.jpg" alt="Photo studio">
               </div>
               <div class="offer__image-wrapper">
                 <img class="offer__image" src="img/apartment-01.jpg" alt="Photo studio">
